--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.analysis.typeCheckingMode": "basic"
+    {
+        "[python]": {
+          "editor.defaultFormatter": null,
+          "editor.codeActionsOnSave": {
+            "source.fixAll": false
+          }
+        }
+      }
 }
