--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-    {
-        "[python]": {
-          "editor.defaultFormatter": null,
-          "editor.codeActionsOnSave": {
-            "source.fixAll": false
-          }
-        }
-      }
+  "[python]": {
+    "editor.defaultFormatter": null,
+    "editor.codeActionsOnSave": {
+      "source.fixAll": false
+    }
+  },
+  "python.analysis.typeCheckingMode": "basic"
 }
