Added Error Handling

--- a/config.ini
+++ b/config.ini
@@ -16,7 +16,7 @@ Import = - Choose the ai files you want to import text into and their translated
     - Merged .ai file are saved as Merged_<.ai file name> and exported to PDF by default.
     IMPORTANT: the translated .docx file NEEDS to be named the exact same as it was when it was imported with a dash followed by the 4-letter LP code appended at the end. If the name has NO_HIDDEN or NO_LOCKED in it, the script will intelligently skip those during import.
     So if you extracted text from 'Example.ai' using the 'Skip Hidden' feature and translated it into German, the translated docx file should be named 'Strings_Example.ai_NO_HIDDEN-de-DE.docx'.
-    If the script can't match a ai file to its corresponding .docx file, it will be skipped.
+    If the script cannot match a ai file to its corresponding .docx file, it will be skipped.
 Pseudo = - Choose the .ai files you want to pseudotranslate using the 'Browse' button.
     - Customise the Extraction behaviour by checking the options as needed:
         - Skip Hidden will not pseudotranslate any hidden TextFrame
@@ -26,3 +26,18 @@ Pseudo = - Choose the .ai files you want to pseudotranslate using the 'Browse' b
     - The program will automatically launch an instance of Adobe Illustrator then proceed to pseudotranslate all the text it can find in the file following the settings you chose.
     - Pseudotranslated .ai file are saved as Pseudo_<.ai file name> and exported to PDF by default.
 IMPORTANT: This step DOES NOT create a Word file.
+[errors]
+Not_ai = is not a .ai file!
+    Please make sure to use the 'Browse' button to ensure you are only choosing .ai files.
+Not_docx = is not a .docx file!
+    Please make sure to use the 'Browse' button to ensure you are only choosing .docx files.
+Not_file = does not exist or is unreadable!
+    Please make sure to use the 'Browse' button to select files before running.
+No_Dir = is a folder and not a file!
+    Only files are supported at this time. If you want to process all the files in that folder, please run the script again, selecting them all using the 'Browse' button.
+Dif_Len = There is not the same amount of .ai and .docx files.
+    Please make sure to check which files were skipped at the end and run the tool again to make sure everything gets imported correctly
+No_ai_left = There is no .ai files to process!
+    Please use the 'Browse' button to select .ai files and try again.
+No_docx_left = There is no .docx files to process!
+    Please use the 'Browse' button to select .docx files and try again.
