--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "[python]": {
     "editor.defaultFormatter": null,
     "editor.codeActionsOnSave": {
-      "source.fixAll": false
+        "source.fixAll": "never"
     }
   },
   "python.analysis.typeCheckingMode": "basic"
